<?xml version="1.0"?>
<package format="2">
  <name>topic_bridge</name>
  <version>0.0.0</version>
  <description>The topic_bridge package</description>

  <author email="rlgkfka614@gmail.com">haram</author>
  <maintainer email="rlgkfka614@gmail.com">haram</maintainer>
  <license>MIT</license>
  <url type="website">http://haram-kim.github.io</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

</package>
